[package]
name = "rust_ledger"
version = "0.8.0"
authors = ["Eric Crowder <eric@ebcrowder.dev>"]
edition = "2021"
license = "GPL-3.0"
description = "CLI accounting tool"
keywords = ["accounting", "finance", "budget"]
categories = ["command-line-utilities"]
repository = "https://github.com/ebcrowder/rust_ledger"
homepage = "https://github.com/ebcrowder/rust_ledger"
readme = "README.md"

[dependencies]

[dev-dependencies]
assert_cmd = "2.0.0"